--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
     spring.datasource.username=root
-    spring.datasource.password=1995
+    spring.datasource.password=
 
 #    spring.jpa.hibernate.ddl-auto=none => com esta chave ele nao recria o banco de dados fazendo assim com que qualquer alteracao nao seje efetivada
     spring.jpa.hibernate.ddl-auto=create
