--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,19 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
     spring.datasource.username=root
-    spring.datasource.password=
+    spring.datasource.password=1995
 
 #    spring.jpa.hibernate.ddl-auto=none => com esta chave ele nao recria o banco de dados fazendo assim com que qualquer alteracao nao seje efetivada
     spring.jpa.hibernate.ddl-auto=create
     spring.jpa.show-sql=true
     spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=gegegege1995@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
