--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=dev
-spring.profiles.active=test
+spring.profiles.active=dev
+#spring.profiles.active=test
 
 default.sender=giovanni.DevJava@hotmail.com
 default.recipient=giovanni.DevJava@hotmail.com       
