Liberando acesso ao H2-Console para que tenha acesso ao banco de testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.profiles.active=dev
 spring.profiles.active=test
 
-default.sender=giovanni.DevJava@hotmail.com
-default.recipient=giovanni.DevJava@hotmail.com       
+default.sender=TestDevelopmentJava@gmail.com
+default.recipient=TestDevelopmentJava@gmail.com       
