--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
     spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=gegegege1995@gmail.com
-spring.mail.password=
+spring.mail.username=TestDevelopmentJava@gmail.com
+spring.mail.password=Java1234
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
