--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=test
 
 default.sender=TestDevelopmentJava@gmail.com
 default.recipient=TestDevelopmentJava@gmail.com       
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
