Salvando primeiro arquivo no s3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ default.sender=TestDevelopmentJava@gmail.com
 default.recipient=TestDevelopmentJava@gmail.com       
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=AKIAUHBY76NSNNYMOXMF
+aws.secret_access_key=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
+s3.bucket=projeto-spring
+s3.region=sa-east-1
