--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,18 @@
 			<version>0.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.562</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>LATEST</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
