--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
 aws.access_key_id=
-aws.secret_access_key=/ZabEKZMENuFCAxMuUfyqucKGC+bfKCtc
+aws.secret_access_key=Myp0l5z/+bfKCtc
 s3.bucket=projeto-spring
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
