--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,11 @@
 			<version>LATEST</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
