--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.profiles.active=dev
-spring.profiles.active=test
+spring.profiles.active=prod
+#spring.profiles.active=test
 
 default.sender=TestDevelopmentJava@gmail.com
 default.recipient=TestDevelopmentJava@gmail.com       
